<resources>
    <string name="app_name">IntentProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sms_button_text">SMS</string>
    <string name="phone_button_text">PHONE</string>
    <string name="call_button_text">Phone</string>
    <string name="web_button_text">WEB</string>
    <string name="map_button_text">MAP</string>
    <string name="share_button_text">SHARE</string>
    <string name="chooser_title">Share the love</string>
    <string name="title_activity_new">NewActivity</string>
    <string name="hello_text">Hello Aliza Levinger</string>
    <string name="new_activity_button_text">NEW ACTIVITY</string>
    <string name="action_help">Help</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="help_fragment_text">Get Help Here</string>
</resources>
