<RelativeLayout
    android:name="button_frag"
    android:id="@+id/button_frag"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivityFragment">

   <Button
       android:id="@+id/sms_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"

       android:text="@string/sms_button_text"
       android:onClick="sendSMS"/>

    <Button
        android:id="@+id/call_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sms_button"
        android:text="@string/call_button_text"
        android:onClick="makeCall"/>

    <Button
    android:id="@+id/web_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/call_button"
    android:text="@string/web_button_text"
    android:onClick="goWeb"/>

    <Button
        android:id="@+id/map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/web_button"
        android:text="@string/map_button_text"
        android:onClick="openMap"/>

    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/map_button"
        android:text="@string/share_button_text"
        android:onClick="share"/>

    <Button
        android:id="@+id/new_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/share_button"
        android:text="@string/new_activity_button_text"
        android:onClick="launchNewActivity"/>





</RelativeLayout>
